--- a/index.html
+++ b/index.html
@@ -85498,15 +85498,21 @@ const DAY_STEPPER_DATA = [{"trader":"0x000d257d","market":"Government shutdown o
         const emoji = ourSellPnl > 0 ? '💰' : ourSellPnl < 0 ? '😬' : '🤝';
         const ourSellCost = ourSells.reduce((s, e) => s + (e._ourCost || 0), 0);
         const sellRoi = ourSellCost > 0 ? ((ourSellPnl / ourSellCost) * 100).toFixed(0) : 0;
+        const sellPortPct = portfolioVal > 0 ? Math.abs(ourSellPnl / portfolioVal * 100) : 0;
         const topSells = ourSells.slice(0, 3).map(e => e.m.length > 35 ? e.m.slice(0, 32) + '…' : e.m);
-        bullets.push(`${emoji} Closed <b>${ourSells.length}</b> position${ourSells.length > 1 ? 's' : ''} (${fmtUsd(ourSellCost)} invested → <b>${ourSellPnl >= 0 ? '+' : ''}${fmtUsd(ourSellPnl)}</b> P&L, ${sellRoi}% ROI) — ${topSells.join(', ')}`);
+        const big = sellPortPct >= 10;
+        const line = `${emoji} Closed <b>${ourSells.length}</b> position${ourSells.length > 1 ? 's' : ''} (${fmtUsd(ourSellCost)} invested → <b>${ourSellPnl >= 0 ? '+' : ''}${fmtUsd(ourSellPnl)}</b> P&L, ${sellRoi}% ROI) — ${topSells.join(', ')}`;
+        bullets.push(big ? `<span style="color:var(--text-primary);font-weight:700;font-size:0.9rem">${line}</span>` : line);
       }
       if (ourRedeems.length > 0) {
         const emoji = ourRedeemPnl > 0 ? '🎉' : '📉';
         const ourRedeemCost = ourRedeems.reduce((s, e) => s + (e._ourCost || 0), 0);
         const redeemRoi = ourRedeemCost > 0 ? ((ourRedeemPnl / ourRedeemCost) * 100).toFixed(0) : 0;
+        const redeemPortPct = portfolioVal > 0 ? Math.abs(ourRedeemPnl / portfolioVal * 100) : 0;
         const topRedeems = ourRedeems.slice(0, 3).map(e => e.m.length > 35 ? e.m.slice(0, 32) + '…' : e.m);
-        bullets.push(`${emoji} <b>${ourRedeems.length}</b> market${ourRedeems.length > 1 ? 's' : ''} resolved (${fmtUsd(ourRedeemCost)} invested → <b>${ourRedeemPnl >= 0 ? '+' : ''}${fmtUsd(ourRedeemPnl)}</b> P&L, ${redeemRoi}% ROI) — ${topRedeems.join(', ')}`);
+        const big = redeemPortPct >= 10;
+        const line = `${emoji} <b>${ourRedeems.length}</b> market${ourRedeems.length > 1 ? 's' : ''} resolved (${fmtUsd(ourRedeemCost)} invested → <b>${ourRedeemPnl >= 0 ? '+' : ''}${fmtUsd(ourRedeemPnl)}</b> P&L, ${redeemRoi}% ROI) — ${topRedeems.join(', ')}`;
+        bullets.push(big ? `<span style="color:var(--text-primary);font-weight:700;font-size:0.9rem">${line}</span>` : line);
       }
       if (noCashCount > 0) {
         bullets.push(`🚫 Missed <b>${noCashCount}</b> trade${noCashCount > 1 ? 's' : ''} — wallet's empty!`);
@@ -85518,7 +85524,9 @@ const DAY_STEPPER_DATA = [{"trader":"0x000d257d","market":"Government shutdown o
       const numPos = sim.positions.size;
       const roiEmoji = roi > 50 ? '🚀' : roi > 10 ? '📊' : roi > 0 ? '✅' : roi > -5 ? '😐' : '🩸';
       const cashNote = sim.cash < 1 ? 'fully deployed 💪' : `${fmtUsd(sim.cash)} dry powder`;
-      bullets.push(`${roiEmoji} Portfolio at <b>${fmtUsd(portfolioVal)}</b> (${roi >= 0 ? '+' : ''}${roi.toFixed(1)}%) — ${numPos} positions open, ${cashNote}`);
+      const dayPctMove = portfolioVal > 0 ? Math.abs(sim.dayPnl / (portfolioVal - sim.dayPnl) * 100) : 0;
+      const portLine = `${roiEmoji} Portfolio at <b>${fmtUsd(portfolioVal)}</b> (${roi >= 0 ? '+' : ''}${roi.toFixed(1)}%) — ${numPos} positions open, ${cashNote}`;
+      bullets.push(dayPctMove >= 10 ? `<span style="color:var(--text-primary);font-weight:700;font-size:0.9rem">${portLine}</span>` : portLine);
 
       if (enteredCount === 0 && ourSells.length === 0 && ourRedeems.length === 0) {
         bullets.unshift('😴 Quiet day — no action on our positions');
